Fix overflow inside tab: overflow:hidden added to tab-content only during transition

--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -10,7 +10,7 @@
     }
     .tab-content {
         position: relative;
-        overflow: hidden;
+        overflow: visible;
         display: flex;
         flex-direction: column;
         padding: 1rem;
@@ -18,6 +18,9 @@
             flex-shrink: 0;
             flex-basis: auto;
         }
+    }
+    .is-transitioning {
+        overflow: hidden;
     }
     &:not(:last-child) {
         margin-bottom: 1.5rem;
